Mon Apr  3 11:09:26 2000  Vishal Kachroo  <vishal@cs.wustl.edu>

	* ace/QoS_Manager.cpp: Added the #if defined 
	  (ACE_HAS_EXPLICIT_TEMPLATE_INSTANTIATION).

Mon Apr  3 08:00:00 2000  Kirthika Parameswaran  <kirthika@cs.wustl.edu>

	* bin/auto_compile: Added <smart_proxies> flag.
	
Mon Apr  3 04:07:47 2000  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

	* ace/config-freebsd-pthread.h: Added a #define for
	  ACE_HAS_ALT_CUSERID so that ACE will build on recent FreeBSD
 	  releases.  Thanks to Raymond Wiker <raymond@orion.no> for
 	  reporting this.

Sun Apr  2 21:32:20 2000  Vishal Kachroo  <vishal@cs.wustl.edu>

	* ace/SOCK.cpp: removed the extra #ifdef 
	  ACE_HAS_TEMPLATE_INSTANTIATION_PRAGMA
	* ace/QoS_Manager.{h,cpp}: removed the obsolete #pragma once.
	* ace/QoS_Session_Impl.i: fully qualified the ACE_End_Point_Type.
	* ace/Makefile: Added the QoS_Manager.  

Sun Apr  2 20:19:36 2000  Vishal Kachroo  <vishal@cs.wustl.edu>

	* ace/QoS_Manager.{h,cpp}: Added these two files. They define
	  a QoS Manager that manages the QoS for a socket. This was being 
	  done earlier by the ACE_SOCK classes.

	  Changed the following files to accomodate the new classes added
	  above.  
	* ace/SOCK.{h,cpp}:  Removed the heavy container from ACE_SOCK.
	* ace/SOCK_Dgram_Mcast.{h,cpp}: Changed the QoS management from
	  ACE_SOCK to ACE_QoS_Manager.
	
	* ace/QoS_Session_Impl.{h,cpp}: 
	* ace/QoS_Session.h: Changed the interface to use the
	  ACE_QoS_Manager class

Sun Apr  2 05:36:04 2000  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

	* ace/Containers_T.cpp: There were a number of incorrect uses
	  of ACE_NEW_MALLOC that I replaced with ACE_ALLOCATOR.  Thanks to
 	  Francisco Bravo <emefjbm@madrid.es.eu.ericsson.se> and Chris
 	  Uzdavinis <chris@atdesk.com> for clarifying the error of my
 	  ways!

Thu Mar 30 19:25:14 2000  Irfan Pyarali  <irfan@cs.wustl.edu>

	* ace/WFMO_Reactor.cpp (suspend_handler_i and resume_handler_i):

	  If a handle is resumed, then:
